# X86-64-semantics

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CheckFormat.cmake  LICENSE.md  README.md  variable-recovery.md  verification-lemmas.k  x86-abstract-semantics.k  x86-abstract-syntax.k  x86-base-instruction-semantics.k  x86-base-instructions-semantics.k  x86-configuration.k  x86-derived-instructions-semantics.k  x86-fetch-execute.k  x86-flag-checks-syntax.k  x86-flag-checks.k  x86-general-utils.k  x86-instructions-semantics.k  x86-loader.k  x86-register-operations.k  x86-register-semantics.k  x86-semantic-utilities.k  x86-semantic-utils.k  x86-semantics.k  x86-syntax.k
baseInstructions/: x86-movq_r64_r64.k  x86-popcntq_r64_r64.k  x86-sarq_r64_cl.k  x86-shrq_r64_cl.k  x86-vdiv.k
derivedImmInstructions/: x86-adcq_r64_imm32.k  x86-adcq_rax_imm32.k  x86-addb_rh_imm8.k  x86-addl_eax_imm32.k  x86-addq_rax_imm32.k  x86-andb_r8_imm8.k  x86-andb_rh_imm8.k  x86-andl_eax_imm32.k  x86-andl_r32_imm8.k  x86-andw_r16_imm8.k  x86-btl_r32_imm8.k  x86-cmpb_r8_imm8.k  x86-cmpq_r64_imm32.k  x86-cmpq_r64_imm8.k  x86-movl_r32_imm32.k  x86-movq_r64_imm32.k  x86-orb_rh_imm8.k  x86-orl_eax_imm32.k  x86-orw_ax_imm16.k  x86-orw_r16_imm8.k  x86-salq_r64_imm8.k  x86-sbbl_r32_imm32.k  x86-sbbq_r64_imm8.k  x86-sbbw_r16_imm16.k  x86-subb_r8_imm8.k  x86-subw_r16_imm16.k  x86-testl_eax_imm32.k  x86-xorb_r8_imm8.k  x86-xorw_r16_imm16.k
derivedInstructions/: x86-adcb_r8_imm8.k  x86-adcb_r8_rh.k  x86-adcb_rh_r8.k  x86-adcb_rh_rh.k  x86-adcw_r16_imm8.k  x86-addb_al_imm8.k  x86-addb_r8_imm8.k  x86-addb_r8_r8.k  x86-addb_r8_rh.k  x86-addb_rh_imm8.k  x86-addb_rh_r8.k  x86-addb_rh_rh.k  x86-addl_r32_imm32.k  x86-addl_r32_r32.k  x86-addpd_xmm_xmm.k  x86-addq_r64_imm32.k  x86-addq_r64_imm8.k  x86-addq_r64_r64.k  x86-addsd_xmm_xmm.k  x86-addsubpd_xmm_xmm.k  x86-addw_r16_r16.k  (+538 more)
source/max_stack_height/: CMakeLists.txt  max_stack_height.cpp
(+32273 files in other folders)
